# wcpy

./: README.md  module.txt  pyproject.toml  requirements.txt  ui_mainwindow.py  utils.py  wavecal.py
src/astro_wcpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/wavelength-calibrator/: fonts.py  io.py  ui_mainwindow.py  utils.py  wavecal.py  widgets.py
src/wavelength-calibrator/ui/: __init__.py  fonts.py  mainwindow.py  ui_mainwindow.py  widgets.py
src/wavelength_calibrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wcpy/: __init__.py  command_line.py  core.py  io.py  mainwindow.py  utils.py
src/wcpy/ui/: __init__.py  fonts.py  mainwindow.py
test/: wavecal_2col.csv
tests/: bfosc_g4_slit18.fits  bfosc_g4_slit18_peak.ecsv  bfosc_g4_slit18_spec.ecsv  bfosc_g4_slit23_2022b.fits  lamp1d.fits  lamp1d_peak.ecsv  wave.txt  wave_uncal.dat.bak  wavecal_1col.csv  wavecal_2col.ecsv  wavecal_2col.fits
