[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wavelength-calibrator"
description = "A UI for wavelength calibration."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Ruining ZHAO", email = "ruiningzhao@mail.bnu.edu.cn"}, 
]
requires-python = ">=3.7.3"
classifiers = [
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Operating System :: OS Independent", 
]
dynamic = ["version", "dependencies"]

[project.scripts]
wcpy = "wcpy.command_line:main"
wavelength-calibrator = "wcpy.command_line:main"

[project.urls]
"Homepage" = "https://github.com/RuiningZHAO/wavelength-calibrator"
"Tracker" = "https://github.com/RuiningZHAO/wavelength-calibrator/issues"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "wcpy.__version__"}
dependencies = {file = "requirements.txt"}
